ログのフォーマットはdocker-compose.ymlに環境変数を設定して指定する

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     image: honto/embulk
     environment:
       PLUGINS: "embulk-input-mysql embulk-output-mysql"
+      LOG_PATH: "--log /etc/embulk/log/embulk.log"
     volumes:
       - ./config:/etc/embulk
     links:
