--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       LOG_PATH: "--log /etc/embulk/log/embulk.log"
     volumes:
       - ./config:/etc/embulk
+      - /var/lib/gems:/root/.embulk/jruby/
     links:
       - mysql
   mysql:
